# pyoperon

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.py  compile_commands.json  environment.yml  flake.nix  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-linux.yml  build-macos.yml  build-nix.yml  build-wheels.yml  build-windows.yml  ci.yml  publish-to-pypi.yml  test.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docker/: flake.nix
docs/: binding-lifetime.md
example/: operon-bindings.py  operon-optuna.py  operon-sklearn.ipynb  operon-sklearn.py  optuna-search.py  optuna_search.py
example/.ipynb_checkpoints/: operon-sklearn-checkpoint.ipynb
include/pyoperon/: optimizer.hpp  pyoperon.hpp
nix/operon/: default.nix
nix/vstat/: default.nix
ports/aria-csv/: portfile.cmake  vcpkg.json
ports/asmjit/: portfile.cmake  vcpkg.json
ports/eve/: portfile.cmake  usage  vcpkg.json
ports/fluky/: fix-includes.patch  portfile.cmake  vcpkg.json
ports/gtl/: portfile.cmake  vcpkg.json
ports/infix-parser/: portfile.cmake  vcpkg.json
ports/lbfgs/: portfile.cmake  vcpkg.json
ports/lexy/: portfile.cmake  vcpkg.json
ports/mdspan/: portfile.cmake
ports/ndsort/: portfile.cmake  vcpkg.json
ports/operon/: add-msvc-support.patch  portfile.cmake  vcpkg.json
ports/pappus/: portfile.cmake  vcpkg.json
ports/pratt-parser/: portfile.cmake
ports/small-vector/: portfile.cmake  vcpkg.json
ports/taskflow/: portfile.cmake  vcpkg.json
ports/vstat/: portfile.cmake  vcpkg.json
pyoperon/: __init__.py  callback.py  sklearn.py
python/: __init__.py  sklearn.py
script/: dependencies.py  dependencies.sh
source/: algorithm.cpp  autodiff.cpp  benchmark.cpp  creator.cpp  crossover.cpp  dataset.cpp  eval.cpp  evaluator.cpp  generator.cpp  initializer.cpp  mutation.cpp  node.cpp  non_dominated_sorter.cpp  optimizer.cpp  problem.cpp  pset.cpp  pyoperon.cpp  reinserter.cpp  selection.cpp  tree.cpp
test/: CMakeLists.txt
test/source/: pyoperon_test.cpp
tests/: test_dataset.py  test_optimizer.py  test_sklearn.py
tests/data/: acs_pums_wy2022.csv  acs_pums_wy2022.json  star98.json
triplets/: clangcl-toolchain.cmake  x64-windows-static-clang.cmake
