[project]
name = "pyoperon"
version = "0.4.0"
authors = [
  { name = "Bogdan Burlacu", email="bogdan.burlacu@pm.me" },
]
description = "Python bindings for the Operon symbolic regression library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/heal-research/pyoperon"
"Bug Tracker" = "https://github.com/heal-research/pyoperon/issues"

[build-system]
requires = [
    "scikit-build>=0.16",
    "setuptools>=42",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"
