[project]
name = "pyoperon"
version = "0.6.0"
authors = [
  { name = "Bogdan Burlacu", email="bogdan.burlacu@pm.me" },
]
description = "Python bindings for the Operon symbolic regression library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = ["numpy>=2.0.2", "pandas>=2.2.3", "scikit-learn>=1.6.1"]

[project.urls]
"Homepage" = "https://github.com/heal-research/pyoperon"
"Bug Tracker" = "https://github.com/heal-research/pyoperon/issues"

[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.11.0",
]
build-backend = "scikit_build_core.build"
